[FIX/#162] 타이포그래피 pretendard로 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="light_gray">#DADADA</color>
     <color name="light_bg">#F4F4F4</color>
 
-    <color name="red">#f31523</color>
+    <color name="red">#F31523</color>
     <color name="navy">#00154B</color>
 </resources>
