--- a/app/src/main/res/values/font_style.xml
+++ b/app/src/main/res/values/font_style.xml
@@ -3,27 +3,32 @@
 
     <!-- Custom font 적용 -->
     <style name="customTextViewFontStyle" parent="@android:style/Widget.DeviceDefault.TextView">
-        <item name="android:fontFamily">@font/notosans_font_family</item>
+        <item name="android:fontFamily">@font/pretendard_font_family</item>
+        <item name="android:fontWeight">500</item>
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
     <style name="customButtonFontStyle" parent="@android:style/Widget.DeviceDefault.Button.Borderless">
-        <item name="android:fontFamily">@font/notosans_font_family</item>
+        <item name="android:fontFamily">@font/pretendard_font_family</item>
+        <item name="android:fontWeight">500</item>
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
     <style name="customEditTextFontStyle" parent="@android:style/Widget.DeviceDefault.EditText">
-        <item name="android:fontFamily">@font/notosans_font_family</item>
+        <item name="android:fontFamily">@font/pretendard_font_family</item>
+        <item name="android:fontWeight">500</item>
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
     <style name="customRadioButtonFontStyle" parent="@android:style/Widget.DeviceDefault.CompoundButton.RadioButton">
-        <item name="android:fontFamily">@font/notosans_font_family</item>
+        <item name="android:fontFamily">@font/pretendard_font_family</item>
+        <item name="android:fontWeight">500</item>
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
     <style name="customCheckboxFontStyle" parent="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox">
-        <item name="android:fontFamily">@font/notosans_font_family</item>
+        <item name="android:fontFamily">@font/pretendard_font_family</item>
+        <item name="android:fontWeight">500</item>
         <item name="android:textColor">@color/dark_gray</item>
     </style>
 
