--- a/app/src/main/res/drawable/round_ractangle_background.xml
+++ b/app/src/main/res/drawable/round_ractangle_background.xml
@@ -2,5 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white" />
-    <corners android:radius="6dp" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/light_gray" />
+    <corners android:radius="10dp" />
 </shape>
