[ADD/#166] 방 생성 시 미션 스킵 버튼 구현

--- a/app/src/main/res/navigation/navigation_create_room.xml
+++ b/app/src/main/res/navigation/navigation_create_room.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_createRoomFragment_to_createMissionsFragment"
             app:destination="@id/createMissionsFragment" />
+        <action
+            android:id="@+id/action_createRoomFragment_to_createConfirmFragment"
+            app:destination="@id/createConfirmFragment" />
         <argument
             android:name="roomId"
             app:argType="integer"
