--- a/app/src/main/res/layout/fragment_create_mission.xml
+++ b/app/src/main/res/layout/fragment_create_mission.xml
@@ -70,26 +70,29 @@
 
         <org.sopt.santamanitto.view.SantaBottomButton
             android:id="@+id/santabottombutton_createmission_skip"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_entire"
-            android:layout_marginBottom="@dimen/margin_createmission_skip_bottom"
+            android:layout_marginStart="@dimen/padding_entire"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="@dimen/margin_bottombutton_bottom"
             android:text="@string/createmission_skip_bottom_button"
             app:isGrayButton="true"
-            app:layout_constraintBottom_toTopOf="@id/santabottombutton_createmission_done"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/santabottombutton_createmission_done"
             app:layout_constraintStart_toStartOf="parent" />
 
         <org.sopt.santamanitto.view.SantaBottomButton
             android:id="@+id/santabottombutton_createmission_done"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_entire"
+            android:layout_marginStart="6dp"
+            android:enabled="false"
+            android:layout_marginEnd="@dimen/padding_entire"
             android:layout_marginBottom="@dimen/margin_bottombutton_bottom"
             android:text="@string/createmission_done_bottom_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/santabottombutton_createmission_skip" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
