--- a/app/src/main/res/layout/item_create_mission.xml
+++ b/app/src/main/res/layout/item_create_mission.xml
@@ -6,6 +6,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:letterSpacing="-0.04"
         app:hint="@string/createmission_mission_hint"
         app:isEditable="false"
         app:isSingleLine="false"
