--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,7 +23,7 @@
 
     <style name="TitleOfCardView" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/dark_gray</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textFontWeight">600</item>
         <item name="android:textSize">@dimen/size_createroom_cardview_titles</item>
     </style>
 
