--- a/app/src/main/res/layout/dialog_invitation_code.xml
+++ b/app/src/main/res/layout/dialog_invitation_code.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_invitationcode_root">
+    android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textview_invitationcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/textview_invitationcode_copybutton"
+        android:background="@drawable/background_round_text"
+        android:backgroundTint="@color/red"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="6dp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="1A2B3C" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textview_invitationcode_copybutton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_round_text"
-        android:backgroundTint="@color/red"
-        android:paddingHorizontal="@dimen/padding_dialog_invitationcode_button_horizontal"
-        android:paddingVertical="@dimen/padding_dialog_invitationcode_button_vertical"
+        android:paddingVertical="22dp"
+        android:background="@color/navy"
+        android:gravity="center"
         android:text="@string/waitingroom_copy_invitation_code"
         android:textColor="@color/white"
         android:textSize="@dimen/size_dialog_invitationcode_copy"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_invitationcode" />
