--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -45,7 +45,7 @@
             android:layout_marginHorizontal="@dimen/padding_entire"
             android:layout_marginTop="@dimen/margin_cardview_to_guidline_top"
             android:layout_marginBottom="@dimen/margin_createroom_cardview_bottom"
-            app:layout_constraintBottom_toTopOf="@id/santabottombutton_createroom"
+            app:layout_constraintBottom_toTopOf="@id/linearlayout_createroom_buttons"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/view_createroom_guideline"
@@ -254,32 +254,39 @@
 
         </org.sopt.santamanitto.view.SantaCardView>
 
-        <org.sopt.santamanitto.view.SantaBottomButton
-            android:id="@+id/santabottombutton_skiproom"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearlayout_createroom_buttons"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/padding_entire"
-            android:layout_marginEnd="4dp"
+            android:layout_marginHorizontal="@dimen/padding_entire"
             android:layout_marginBottom="@dimen/margin_bottombutton_bottom"
-            android:enabled="@{!vm.nameIsNullOrEmpty}"
-            android:text="@string/createroom_btn_skip"
-            app:isGrayButton="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/santabottombutton_createroom"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <org.sopt.santamanitto.view.SantaBottomButton
-            android:id="@+id/santabottombutton_createroom"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="@dimen/padding_entire"
-            android:layout_marginBottom="@dimen/margin_bottombutton_bottom"
-            android:enabled="@{!vm.nameIsNullOrEmpty}"
-            android:text="@string/createroom_btn_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/santabottombutton_skiproom" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <org.sopt.santamanitto.view.SantaBottomButton
+                android:id="@+id/santabottombutton_skiproom"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:enabled="@{!vm.nameIsNullOrEmpty}"
+                android:text="@string/createroom_btn_skip"
+                app:isGrayButton="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/santabottombutton_createroom"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <org.sopt.santamanitto.view.SantaBottomButton
+                android:id="@+id/santabottombutton_createroom"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:enabled="@{!vm.nameIsNullOrEmpty}"
+                android:text="@string/createroom_btn_next"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/santabottombutton_skiproom" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
