[REFACTOR] 설정 아이콘 변경

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -35,7 +35,7 @@
             android:layout_marginTop="@dimen/margin_main_setting_top"
             android:background="@null"
             android:padding="@dimen/padding_entire"
-            android:src="@drawable/ic_setting"
+            android:src="@drawable/ic_my_page"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
