[REFACTOR] 레거시 코드 변경 - MyManittoModel -> TempMyManittoModel - roomId : Int -> String - CachedMainUserDataSource 삭제 - enqueue -> 코루틴 - LiveData -> Flow

--- a/app/src/main/res/navigation/navigation_create_room.xml
+++ b/app/src/main/res/navigation/navigation_create_room.xml
@@ -18,8 +18,8 @@
             app:destination="@id/createConfirmFragment" />
         <argument
             android:name="roomId"
-            app:argType="integer"
-            android:defaultValue="-1" />
+            app:argType="string"
+            android:defaultValue="" />
     </fragment>
 
     <fragment
