[FIX/#164] ManittoRoomModel 수정

--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -4,9 +4,6 @@
 
     <data>
 
-        <variable
-            name="relation"
-            type="org.sopt.santamanitto.room.manittoroom.network.ManittoRoomRelations" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -59,12 +56,12 @@
         <org.sopt.santamanitto.view.SantaLoading
             android:id="@+id/santaloading_itemresult"
             android:layout_width="match_parent"
+            tool:visibility="gone"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="@id/textview_itemresult_santa"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/textview_itemresult_santa"
-/>
+            app:layout_constraintTop_toTopOf="@id/textview_itemresult_santa" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
