--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -96,19 +96,19 @@
 
     <dimen name="height_mymanitto_viewholder">204dp</dimen>
     <dimen name="width_mymanitto_viewholder">160dp</dimen>
-    <dimen name="size_mymanitto_title">17sp</dimen>
+    <dimen name="size_mymanitto_title">16sp</dimen>
     <dimen name="padding_mymanitto_horizontal">14dp</dimen>
     <dimen name="padding_mymanitto_veertical">17dp</dimen>
-    <dimen name="size_mymanitto_mission_text">12dp</dimen>
-    <dimen name="size_mymanitto_state_text">12dp</dimen>
+    <dimen name="size_mymanitto_mission_text">14sp</dimen>
+    <dimen name="size_mymanitto_state_text">14sp</dimen>
     <dimen name="lineheight_mymanitto_mission_text">18sp</dimen>
     <dimen name="margin_mymanitto_temp_top">16dp</dimen>
     <dimen name="margin_mymanitto_state_top">7dp</dimen>
     <dimen name="margin_mymanitto_mission_top">25dp</dimen>
     <dimen name="size_main_mymanitto">20sp</dimen>
     <dimen name="margin_mymanitto_item_decoration">16dp</dimen>
-    <dimen name="padding_mymanitto_daydiff_textview_horizontal">10dp</dimen>
-    <dimen name="padding_mymanitto_daydiff_textview_vertical">5dp</dimen>
+    <dimen name="padding_mymanitto_daydiff_textview_horizontal">16dp</dimen>
+    <dimen name="padding_mymanitto_daydiff_textview_vertical">6dp</dimen>
 
     <dimen name="margin_createroom_cardview_bottom">35dp</dimen>
     <dimen name="size_createroom_cardview_titles">16sp</dimen>
