--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <!-- TODO 하단 5개 색상 추후 삭제 -->
     <color name="gray_1">#EFEFEF</color>
     <color name="gray_2">#C4C4C4</color>
+    <color name="gray_3">#ECECEC</color>
     <color name="gray_4">#F7F7F7</color>
     <color name="green">#2F5846</color>
     <color name="shadow_gray">#E3E3E3</color>
